# demo

./: .gitignore  LICENSE  README.md
cmake/: CMakeLists.txt  README.md
cmake/asio/: CMakeLists.txt  CMakeSettings.json  main.cc
cmake/asio/net/: CMakeLists.txt  net.cc  net.h
cmake/asio/pb/: buildcpp.bat  enums.proto  login.proto  msgid.proto
cmake/asio/pb/cpp/: enums.pb.cc  enums.pb.h  login.pb.cc  login.pb.h  msgid.pb.cc  msgid.pb.h
cmake/bigint/: 10W.txt  CMakeLists.txt  test.c
cmake/bigint/inc/: bigint.h
cmake/bigint/src/: base.c  bigint.c  nat.c  nat.h  natadd.c  natconv.c  natdiv.c  natmul.c  natsub.c  priv.h
cmake/c_try_catch/: CMakeLists.txt  main.c
cmake/c_try_catch/ctry/: CMakeLists.txt  except.c  except.h
cmake/cobj/: CMakeLists.txt  main.c  nasm.asm  shape.c  shape.cc  shape.h
cmake/coroutine/: CMakeLists.txt  README.md  main.c
cmake/coroutine/co/: co.c  co.h
cmake/coroutine/inc/: c11_threads.h  co.h
cmake/coroutine/src/: co.c  ctx.c  ctx.h  swap_ctx_x64.asm  swap_ctx_x86.asm
cmake/cxx20/: CMakeLists.txt  README.md  main.cpp
cmake/cxx20/libA/: CMakeLists.txt  api.cc  apiA.cc  minus.cc  plus.cc  test.cc
cmake/cxx20/libB/: CMakeLists.txt  apiB.cc  bag.cc  item.h  max.cc
cmake/cxx20/libC/: CMakeLists.txt  apiC.cc  impl.cc
cmake/cxx20/stdm/: CMakeLists.txt  windows.cc
cmake/gtest/: CMakeLists.txt  test.cpp
cmake/import_std/: CMakeLists.txt  main.cc
cmake/io_uring/: CMakeLists.txt  main.c
cmake/iocp/: CMakeLists.txt  client.c  server.c  server_ex.c
cmake/pkg/: CMakeLists.txt  main.c
cmake/protobuf/: CMakeLists.txt  README.md  a.proto  main.c  proto.cmake
cmake/protobuf/src/pb/: t.proto  x.proto
cmake/rpc_c/: CMakeLists.txt  README.md  login.proto  main.c  rpc_c.h  rpc_client.c  rpc_server.c  rpc_util.c
cmake/rpc_c/pbc/: login.pb-c.c  login.pb-c.h
cmake/swissmap/: CMakeLists.txt  main.cc  swissmap.h
go/cgo/: README.md  cgo.c  cgo.h  main.c  main.go  sum.c
go/iocp/: go.mod  main.go
makefile/: Makefile
makefile/src/: Makefile  main.c  nasm.asm  prec.h  precxx.h
makefile/src/net/: net.h
makefile/src/net/src/: net.c
mupdf/: .gdbinit  CMakeLists.txt  README.md  fix-s22pdf.js  mupdf.natvis  print_text.c  replace_builtin.c  replace_font.py  t.c  t.cc
mupdf/gdbscripts/: mupdf_printer.py  printer.py  printer_limit.py
mupdf/lldbscripts/: mupdf_printer.py
python/mcp/: simple_mcp.py
